<resources>
    <string name="app_name">kotlin-api-project</string>
    <string name="about_title">About</string>
    <string name="business_title">Businesses</string>
    <string name="events_title">Events</string>
    <string name="reviews_title">Categories</string>
    <string name="about_screen">About Group Members</string>
    <string name="business_screen">Businesses</string>
    <string name="events_screen">Events Screen</string>
    <string name="reviews_screen">Categories Screen</string>
    <string name="maps_apiKey">AIzaSyAWEIFtX5oSl2gC-bROnD_bPwHK07dcHS4</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="view_location"> </string>
    <string name="search_location">Search location</string>
    <string name="search">Search</string>
    <string name="location_finder">Location Finder</string>
    <string name="business_name">Business Name</string>
    <string name="business_address">Business Address</string>
    <string name="phone_number">Phone</string>
    <string name="check_business_competition">Check business competition</string>
    <string name="event">Event</string>
    <string name="address">Address</string>
    <string name="desc">Description</string>
    <string name="attendees">Attending Count</string>
    <string name="isfree">IsFree</string>
    <string name="my_business_info_app">My Business Info App</string>
    <string name="app_description">This application serves as a comprehensive guide for both businesses and individuals. It allows you to explore nearby businesses and events, providing a dynamic way to engage with your local community. Moreover, if you\'re a business owner, this app offers a unique feature to identify and understand your competition within your specific business category. Enhance your local experience and business strategy with our app.</string>
    <string name="members">Members:\n1. Matthew Ovie\n2. Imasha Ekanayake\n3. Ronald Bagaporo Jr.\n4. Ramesh Abeysekara</string>
    <string name="search_your_competitors">Search your competitors</string>
    <string name="search_event">Search</string>
    <string name="search_for_events">Search for events</string>
</resources>