<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/event"/>

    <TextView
        android:id="@+id/eventNameTextView"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/imageView"
        android:text="@string/event"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventNameTextView"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/imageView"
        android:text="@string/address"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textAddress"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/purple"
        android:layout_toEndOf="@id/imageView"
        android:text="@string/desc"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textAttendees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textEventDescription"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/imageView"
        android:text="@string/attendees"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textIsFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textAttendees"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/imageView"
        android:text="@string/isfree"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="14sp" />

</RelativeLayout>

