<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_business_info_app"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textSize="24sp"
        android:layout_below="@+id/title"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="italic" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/description"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/members"
        android:textSize="20sp"
        android:layout_below="@+id/divider"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_background"
        app:menu="@menu/bottom_menu"
        app:itemIconTint="@drawable/item_selector"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/btnViewLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_location"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp" />

</RelativeLayout>
