<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusinessActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_screen"
        android:textSize="30sp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchTextInputLayout"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:hint="@string/search_location" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchTextInputLayout"
        android:layout_marginTop="8dp"
        android:text="@string/search"
        android:layout_marginStart="13dp"/>

    <ImageButton
        android:id="@+id/locationBtn"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:layout_below="@+id/searchTextInputLayout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/searchButton"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/location_finder"
        app:srcCompat="@drawable/baseline_add_location_alt_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_below="@id/searchButton"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_background"
        app:menu="@menu/bottom_menu"
        app:itemIconTint="@drawable/item_selector"
        app:itemTextColor="@color/white"
        app:itemActiveIndicatorStyle="@style/Theme.BottomNavigationView.ActiveIndicator"
        android:layout_alignParentBottom="true" />


</RelativeLayout>
